Add drag and drop support

--- a/resources/modules/header/template/headertemplate.html
+++ b/resources/modules/header/template/headertemplate.html
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input type="text" class="form-control" placeholder="Search" />
                 </div>
             </form>
             <ul class="nav navbar-nav pull-right">
@@ -41,7 +41,7 @@
     </div>
     <div class="add-new-board" style="display: none">
         <h4>Title</h4>
-        <input type="text" val="test">
+        <input type="text" value="test" />
         <div style="margin-top: 10px;">
             <button type="button" class="btn btn-success save-item-details">Save</button>
             <button type="button" class="btn btn-danger cancel-item">Cancel</button>
