--- a/resources/modules/board/template/itemtemplate.html
+++ b/resources/modules/board/template/itemtemplate.html
@@ -1,11 +1,11 @@
-<div class="item-container">
+<div draggable="true" class="item-container">
     <div class="display-content">
         <h6 class="heading">Test</h6>
         <p>i am here.....</p>
     </div>
     <div class="edit-content" style="display: none;">
         <div>Title</div>
-        <input type="text" val="test">
+        <input type="text" val="test" />
         <div>Description</div>
         <textarea style="width: 100%; height: 50px;"></textarea>
         <button type="button" class="btn btn-success save-item-details">Save</button>
