--- a/resources/modules/board/template/listtemplate.html
+++ b/resources/modules/board/template/listtemplate.html
@@ -3,7 +3,7 @@
 <h5 class="add-new-card" >Add a card…</h5>
 <div class="add-content" style="display: none;">
     <div>Title</div>
-    <input type="text" val="test">
+    <input type="text" val="test" />
     <div>Description</div>
     <textarea style="width: 100%; height: 50px;"></textarea>
     <button type="button" class="btn btn-success save-item-details">Save</button>
