--- a/resources/modules/board/template/itemtemplate.html
+++ b/resources/modules/board/template/itemtemplate.html
@@ -1,14 +1,16 @@
 <div draggable="true" class="item-container">
     <div class="display-content">
-        <h6 class="heading">Test</h6>
-        <p>i am here.....</p>
+        <h6 class="heading display-name">{{name}}</h6>
+
+        <p class="display-description">{{description}}</p>
     </div>
     <div class="edit-content" style="display: none;">
         <div>Title</div>
-        <input type="text" val="test" />
+        <input type="text" class="item-name"/>
+
         <div>Description</div>
-        <textarea style="width: 100%; height: 50px;"></textarea>
-        <button type="button" class="btn btn-success save-item-details">Save</button>
+        <textarea style="width: 100%; height: 50px;" class="item-description"></textarea>
+        <button type="button" class="btn btn-success edit-item">Save</button>
         <button type="button" class="btn btn-danger cancel-item">Cancel</button>
     </div>
     <span class="icon-edit glyphicon glyphicon-edit"></span>
