--- a/resources/modules/board/template/listtemplate.html
+++ b/resources/modules/board/template/listtemplate.html
@@ -1,11 +1,12 @@
-<h5 class="heading"> Welcome list </h5>
+<h5 class="heading">{{name}}</h5>
 <div class="js-items"></div>
-<h5 class="add-new-card" >Add a card…</h5>
+<h5 class="add-new-card">Add a card…</h5>
 <div class="add-content" style="display: none;">
     <div>Title</div>
-    <input type="text" val="test" />
+    <input type="text" class="add-item-name"/>
+
     <div>Description</div>
-    <textarea style="width: 100%; height: 50px;"></textarea>
-    <button type="button" class="btn btn-success save-item-details">Save</button>
+    <textarea style="width: 100%; height: 50px;" class="add-item-description"></textarea>
+    <button type="button" class="btn btn-success save-item">Save</button>
     <button type="button" class="btn btn-danger cancel-item">Cancel</button>
 </div>
