--- a/resources/modules/header/template/headertemplate.html
+++ b/resources/modules/header/template/headertemplate.html
@@ -11,17 +11,14 @@
             <a class="navbar-brand show-board-list" href="#">Boards</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-            <form class="navbar-form navbar-left" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search" />
-                </div>
-            </form>
             <ul class="nav navbar-nav pull-right">
-                <li><a class="add-btn-parent" href="#"><span class="add-btn glyphicon glyphicon-plus"></span></a></li>
+                <li><a class="add-icon-container" href="#"><span class="add-btn glyphicon glyphicon-plus"></span></a>
+                </li>
                 <li>
                     <a href="#" style="padding: 10px">
-                        <span class="member"> <img class="member-avatar" height="30" width="30" src="https://trello-avatars.s3.amazonaws.com/4fb67f6896e541c1d7b5776040acc000/30.png" alt="Virbhadrasinh (virbhadrasinh)" title="Virbhadrasinh (virbhadrasinh)"> </span>
-                        <span>Virbhadrasinh</span>
+                        <span class="member"> <img class="member-avatar" height="30" width="30"
+                                                   src={{avatarURL}}> </span>
+                        <span>{{name}}</span>
                     </a>
                 </li>
             </ul>
@@ -29,7 +26,7 @@
     </div>
 </nav>
 
-<div class="well pull-right add-task" style="display: none;">
+<div class="well pull-right add-board-container" style="display: none;">
     <div class="add-board">
         <span>Add</span>
         <button type="button" class="close"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
@@ -41,9 +38,11 @@
     </div>
     <div class="add-new-board" style="display: none">
         <h4>Title</h4>
-        <input type="text" value="test" />
+        <input type="text" class="js-board-name"/>
+
+        <div class="alert-danger error" style="display: none"> Please add board name.</div>
         <div style="margin-top: 10px;">
-            <button type="button" class="btn btn-success save-item-details">Save</button>
+            <button type="button" class="btn btn-success save-board">Save</button>
             <button type="button" class="btn btn-danger cancel-item">Cancel</button>
         </div>
     </div>
@@ -55,14 +54,6 @@
         <span class="glyphicon glyphicon-list-alt"></span>
         <span>My Boards</span>
     </div>
-    <hr  style="margin-bottom: 10px;">
-    <div class="board-name">
-        AAAAAA
-    </div>
-    <div class="board-name">
-        AAAAAA
-    </div>
-    <div class="board-name">
-        AAAAAA
-    </div>
+    <hr style="margin-bottom: 10px;">
+    <div class="all-boards"></div>
 </div>
